# paraBioFVM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-multi-platform.yml
include/: agent_container.h  mesh.h  microenvironment.h  solver.h  types.h
include/BioFVM/: agent.h  agent_container.h  agent_container_base.h  agent_data.h  data_utils.h  mesh.h  microenvironment.h  microenvironment_builder.h  microenvironment_serializer.h  omp_utils.h  serializer.h  solver.h  solver_data_residency.h  types.h  vtk_serializer.h  vtk_serializer_base.h
src/: agent.cpp  agent.h  agent_container.cpp  agent_container.h  agent_container_base.cpp  agent_data.cpp  agent_data.h  main.cpp  main_device.cpp  mesh.cpp  mesh.h  microenvironment.cpp  microenvironment.h  microenvironment_builder.cpp  microenvironment_builder.h  solver.cpp  solver.h  traits.h  types.h  vtk_serializer.cpp  vtk_serializer_base.cpp
src/compute/host/bulk/: bulk_solver.cpp  bulk_solver.h
src/compute/host/cell/: cell_solver.cpp  cell_solver.h
src/compute/host/diffusion/: diffusion_solver.cpp  diffusion_solver.h
src/compute/host/dirichlet/: dirichlet_solver.cpp  dirichlet_solver.h
src/compute/host/gradient/: gradient_solver.cpp  gradient_solver.h
src/diffusion_solvers/: host_solver.cpp  host_solver.h
src/solver/: common_solver.cpp  common_solver.h  solver.cpp
src/solver/device/: cell_solver.cl  cell_solver.cpp  cell_solver.h  device_context.cpp  device_context.h  diffusion_solver.cl  diffusion_solver.cpp  diffusion_solver.h  dirichlet_solver.cl  dirichlet_solver.cpp  dirichlet_solver.h  opencl_solver.cpp  opencl_solver.h  solver.cpp  solver.h
src/solver/device/CUDA/: CMakeLists.txt  cell_solver.cpp  cell_solver.cu  cell_solver.h  cuda_solver.cpp  cuda_solver.h  device_context.cpp  device_context.h  diffusion_solver.cpp  diffusion_solver.cu  diffusion_solver.h  dirichlet_solver.cpp  dirichlet_solver.cu  dirichlet_solver.h  solver.cpp  solver.h
src/solver/device/OpenCL/: CMakeLists.txt  cell_solver.cl  cell_solver.cpp  cell_solver.h  device_context.cpp  device_context.h  diffusion_solver.cl  diffusion_solver.cpp  diffusion_solver.h  dirichlet_solver.cl  dirichlet_solver.h  opencl_solver.cpp  opencl_solver.h  solver.h
src/solver/host/: bulk_solver.cpp  bulk_solver.h  cell_solver.cpp  cell_solver.h  diffusion_solver.cpp  diffusion_solver.h  dirichlet_solver.cpp  dirichlet_solver.h  gradient_solver.cpp  gradient_solver.h  lapack_diffusion_solver.cpp  lapack_diffusion_solver.h  lapack_diffusion_solver2.cpp  lapack_diffusion_solver2.h  solver.cpp  solver.h
src/solvers/: solver.cpp  solver.h
src/solvers/host/bulk/: bulk_solver.cpp  bulk_solver.h
src/solvers/host/cell/: cell_solver.cpp  cell_solver.h
src/solvers/host/diffusion/: diffusion_solver.cpp  diffusion_solver.h
src/solvers/host/dirichlet/: dirichlet_solver.cpp  dirichlet_solver.h
src/solvers/host/gradient/: gradient_solver.cpp  gradient_solver.h
test/: solver_wrapper.h  test.cpp  test_device.cpp  utils.cpp  utils.h
tridiagonal-research/: algos.py
